# zlm

./: README.md  pyproject.toml
.github/skills/: use-zlm.md
src/zlm/: __init__.py  helper.py
src/zlm/cli/: __init__.py
src/zlm/core/: __init__.py  memory_context.py
src/zlm/utils/: __init__.py  entries.py  session.py  storage.py  workspace.py
tests/: test_cli.py  test_entries_utils.py  test_integration_stress.py  test_memory_context.py  test_session_utils.py  test_storage_utils.py  test_workspace_utils.py  test_zlm_helper.py
