[project]
name = "zlm"
version = "0.2.1"
description = "Zack's lobe memory session cache"
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "orjson>=3.11.9",
]

[project.scripts]
zlm = "zlm:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
